# ktbai_noticeboard_fastapi

./: README.md  auth_utils.py  database.py  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
controllers/: ai_controller.py  comment_controller.py  post_controller.py  user_controller.py
models/: ai_model.py  comment_model.py  post_model.py  user_model.py
routers/: ai_router.py  comment_router.py  post_router.py  user_router.py
